# fbx2usd

./: .gitignore  LICENSE  Makefile  Mixamo2Custom.json  README.md  append-fbx-skeletal-animation  fbx2usd  fbx2usd.py  fbxaxisconvert.cpp  fbxinspect  fbxscale  fbxsdk_fix.h  fbxunit  pyproject.toml  requirements.txt  retarget-mixamo  usdinspect
.claude/: settings.local.json
TPoses/: Mixamo-Skeleton-TPose.fbx  Synty-Skeleton-TPose.fbx
